Refactored create case response open api doc
