# client/output.swagger.json
@@ -71,6 +71,7 @@
         "tags": [
           "data"
         ],
+        "description": "test",
         "operationId": "CreateCase",
         "requestBody": {
           "content": {
@@ -83,8 +84,15 @@
           "required": true
         },
         "responses": {
-          "200": {
-            "description": "Success"
+          "201": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CaseDetailsResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -163,6 +171,35 @@
   },
   "components": {
     "schemas": {
+      "CaseDetailsResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "created": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "status": {
+            "$ref": "#/components/schemas/CaseStatus"
+          },
+          "expire": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "ownerId": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "CaseStatus": {
         "enum": [
           0,
